--- a/src/app/level-up-modal/level-up-modal.component.html
+++ b/src/app/level-up-modal/level-up-modal.component.html
@@ -5,8 +5,10 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <h2>Parabéns!</h2>
-  <p>Você avançou para o nível {{ level }}!</p>
+  <div class="modal-content">
+    <h2>Parabéns!</h2>
+    <p>Você avançou para o nível {{ level }}!</p>
 
-  <ion-button expand="full" (click)="closeModal()">Continuar</ion-button>
+    <ion-button expand="full" (click)="closeModal()">Continuar</ion-button>
+  </div>
 </ion-content>
